# trading_metadata

./: .env.local  .env.prod  .gitignore  Dockerfile  README.md  pyproject.toml
src/portfolio_ingest/: __init__.py  app.py  config.py  db.py  logging_utils.py  models.py  runner.py
src/portfolio_ingest/sources/: __init__.py  base.py  screener.py  trendlyne.py  utils.py
src/portfolio_ingest/templates/: base.html  dashboard.html  schedule.html
