[project]
name = "portfolio-ingest"
version = "0.1.0"
description = "Ingests investor holdings and deal data into PostgreSQL"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "python-dateutil>=2.8",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.24",
    "jinja2>=3.1",
    "apscheduler>=3.10",
]

[project.scripts]
portfolio-ingest = "portfolio_ingest.runner:main"

[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"
